--- a/client/index.html
+++ b/client/index.html
@@ -131,7 +131,7 @@
                         <i class="bi bi-calendar-check text-success" style="font-size: 2.5rem;"></i>
                         <h5 class="mt-3">My Bookings</h5>
                         <p class="text-muted">View your class bookings</p>
-                        <a href="#" class="btn btn-success" onclick="showSection('bookings'); return false;">
+                        <a href="#" class="btn btn-success" onclick="showSection('customer-bookings'); return false;">
                           View Bookings <i class="bi bi-arrow-right"></i>
                         </a>
                       </div>
@@ -143,7 +143,7 @@
                         <i class="bi bi-heart text-danger" style="font-size: 2.5rem;"></i>
                         <h5 class="mt-3">My Pets</h5>
                         <p class="text-muted">Manage your pet profiles</p>
-                        <a href="#" class="btn btn-danger" onclick="showSection('pets'); return false;">
+                        <a href="#" class="btn btn-danger" onclick="showSection('customer-pets'); return false;">
                           View Pets <i class="bi bi-arrow-right"></i>
                         </a>
                       </div>
@@ -227,9 +227,14 @@
           <div class="col-12">
             <div class="d-flex justify-content-between align-items-center mb-4">
               <h2><i class="bi bi-calendar-event"></i> Available Classes</h2>
-              <button class="btn btn-primary" onclick="openCustomerPetModal()">
-                <i class="bi bi-heart"></i> Add Pet
-              </button>
+              <div>
+                <button class="btn btn-primary" onclick="openCustomerPetModal()">
+                  <i class="bi bi-heart"></i> Add Pet
+                </button>
+                <button class="btn btn-outline-primary ms-2" onclick="showSection('customer-dashboard'); return false;">
+                  <i class="bi bi-arrow-left"></i> Back to Dashboard
+                </button>
+              </div>
             </div>
           </div>
         </div>
@@ -279,6 +284,97 @@
         <div class="row" id="customer-classes-container">
           <div class="col-12 text-center">
             <p class="text-muted">Loading classes...</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Customer Bookings Section -->
+      <div id="customer-bookings-section" class="content-section" style="display: none;">
+        <div class="row mb-4">
+          <div class="col-12">
+            <div class="d-flex justify-content-between align-items-center mb-4">
+              <h2><i class="bi bi-calendar-check"></i> My Bookings</h2>
+              <button class="btn btn-outline-primary" onclick="showSection('customer-dashboard'); return false;">
+                <i class="bi bi-arrow-left"></i> Back to Dashboard
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-12">
+            <div class="card shadow-lg">
+              <div class="card-body">
+                <div class="table-responsive">
+                  <table class="table table-hover">
+                    <thead>
+                      <tr>
+                        <th>Booking ID</th>
+                        <th>Pet Name</th>
+                        <th>Class Title</th>
+                        <th>Class Date & Time</th>
+                        <th>Status</th>
+                        <th>Amount Paid</th>
+                        <th>Actions</th>
+                      </tr>
+                    </thead>
+                    <tbody id="customer-bookings-table-body">
+                      <tr>
+                        <td colspan="7" class="text-center">Loading...</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Customer Pets Section -->
+      <div id="customer-pets-section" class="content-section" style="display: none;">
+        <div class="row mb-4">
+          <div class="col-12">
+            <div class="d-flex justify-content-between align-items-center mb-4">
+              <h2><i class="bi bi-heart"></i> My Pets</h2>
+              <div>
+                <button class="btn btn-primary" onclick="openCustomerPetModal()">
+                  <i class="bi bi-plus-circle"></i> Add Pet
+                </button>
+                <button class="btn btn-outline-primary ms-2" onclick="showSection('customer-dashboard'); return false;">
+                  <i class="bi bi-arrow-left"></i> Back to Dashboard
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-12">
+            <div class="card shadow-lg">
+              <div class="card-body">
+                <div class="table-responsive">
+                  <table class="table table-hover">
+                    <thead>
+                      <tr>
+                        <th>Pet ID</th>
+                        <th>Pet Name</th>
+                        <th>Species</th>
+                        <th>Breed</th>
+                        <th>Birthdate</th>
+                        <th>Notes</th>
+                        <th>Actions</th>
+                      </tr>
+                    </thead>
+                    <tbody id="customer-pets-table-body">
+                      <tr>
+                        <td colspan="7" class="text-center">Loading...</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
