--- a/client/index.html
+++ b/client/index.html
@@ -202,18 +202,6 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-4 mb-3">
-                    <div class="card h-100">
-                      <div class="card-body text-center">
-                        <i class="bi bi-people text-info" style="font-size: 2.5rem;"></i>
-                        <h5 class="mt-3">Students</h5>
-                        <p class="text-muted">View your students and their pets</p>
-                        <a href="#" class="btn btn-info" onclick="showSection('customers'); return false;">
-                          View Students <i class="bi bi-arrow-right"></i>
-                        </a>
-                      </div>
-                    </div>
-                  </div>
                 </div>
               </div>
             </div>
@@ -1017,9 +1005,14 @@
       <div id="classes-section" class="content-section" style="display: none;">
         <div class="d-flex justify-content-between align-items-center mb-3">
           <h2><i class="bi bi-calendar-event"></i> Classes</h2>
-          <button class="btn btn-primary" onclick="openClassModal()">
-            <i class="bi bi-plus-circle"></i> Add Class
-          </button>
+          <div>
+            <button class="btn btn-primary" onclick="openClassModal()">
+              <i class="bi bi-plus-circle"></i> Add Class
+            </button>
+            <button class="btn btn-outline-primary ms-2" onclick="showSection('trainer-dashboard'); return false;">
+              <i class="bi bi-arrow-left"></i> Back to Dashboard
+            </button>
+          </div>
         </div>
         <div class="table-responsive">
           <table class="table table-striped table-hover">
@@ -1050,9 +1043,14 @@
       <div id="bookings-section" class="content-section" style="display: none;">
         <div class="d-flex justify-content-between align-items-center mb-3">
           <h2><i class="bi bi-calendar-check"></i> Bookings</h2>
-          <button class="btn btn-primary" onclick="openBookingModal()">
-            <i class="bi bi-plus-circle"></i> Add Booking
-          </button>
+          <div>
+            <button class="btn btn-primary" onclick="openBookingModal()">
+              <i class="bi bi-plus-circle"></i> Add Booking
+            </button>
+            <button class="btn btn-outline-primary ms-2" onclick="showSection('trainer-dashboard'); return false;">
+              <i class="bi bi-arrow-left"></i> Back to Dashboard
+            </button>
+          </div>
         </div>
         <div class="table-responsive">
           <table class="table table-striped table-hover">
